second homework binding db with rest api